# lending-protocol-v2

./: .gitignore  Makefile  README.md  ape_console_extras.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests-unit.yaml
configs/dev/: p2p.json
configs/int/: p2p.json
configs/local/: p2p.json  p2p.json.template
contracts/: P2PLendingControl.vy  P2PLendingErc20.vy  P2PLendingNfts.vy
contracts/auxiliary/: DelegateRegistry2_abi.json  DelegateRegistry2_deployment.hex  DelegateRegistry2_runtime.hex  DelegationRegistryMock.vy  WETH9Mock.vy
natspec/: P2PLendingControl.json  P2PLendingNfts.json
scripts/: get_collections.py  publish.py
scripts/_helpers/: basetypes.py  contracts.py  deployment.py
tests/: conftest_base.py
tests/stubs/: P2PNftsProxy.vy
tests/unit/: conftest.py
tests/unit/p2p_controller/: test_p2p_controller.py
tests/unit/p2p_nfts/: conftest.py  test_p2p_nfts_claim.py  test_p2p_nfts_config.py  test_p2p_nfts_create.py  test_p2p_nfts_create_erc20.py  test_p2p_nfts_create_eth.py  test_p2p_nfts_lender_replace.py  test_p2p_nfts_lender_replace_eth.py  test_p2p_nfts_replace.py  test_p2p_nfts_replace_erc20.py  test_p2p_nfts_replace_eth.py  test_p2p_nfts_revoke.py  test_p2p_nfts_settle.py  test_p2p_nfts_settle_erc20.py  test_p2p_nfts_settle_eth.py
